# isi-PeTracker

./: .gitignore  Dockerfile  Makefile  PROJECT.md  README.md  agent.md  config.json  docker-compose.yml  project_setup.py  pyproject.toml
backend/: app.py  model.py
backend/inference/: dataset.py  efficientnet_v2_s.py  metrics.py  train_model.py  trainer.py
backend/inference/data/: gen_data_csv.py  populate_data.py
backend/utils/: logger.py
frontend/static/: main.js  script.js  shelter.js  styles.css  stylesShelter.css  stylesUser.css
frontend/templates/: login.html  shelter.html  user.html
init/mysql/: petracker.db.sql
testing/: test.py  test_conectividad.py  test_frontend.py  test_gen_data.py  test_login.py  test_prediccion.py  test_shelter_report.py
